# virtual-football-td

./: README.md  pyproject.toml
virtualtd/generators/: constraints.py  creator.py  model.py
virtualtd/interface/: mvp.py
virtualtd/simulators/: model.py  predictors.py  run.py
